--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "petful-server",
   "scripts": {
-    "dev": "nodemon server",
-    "start": "node src/server.js",
+    "dev": "nodemon server.js",
+    "start": "node server.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
@@ -18,6 +18,7 @@
     "helmet": "^4.3.1",
     "knex": "^0.20.15",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.7",
     "pg": "^7.18.2"
   },
   "devDependencies": {
